# craytracer20

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  craytracer.cpp
primitives/: CMakeLists.txt  primitives.cxx  primitives.mpp  primitives_test.cpp  pv.cxx  pv.mpp  ray.mpp
test/: CMakeLists.txt  primitives_test.cpp  pv_test.cpp
